# jott

./: .gitignore  .todo  CHANGES.md  Pipfile  README.md  app.py  pyproject.toml  setup.py  tox.ini
jott/: __init__.py  contents.py  env.py  exc.py  fs.py  gui.py  signal.py
jott/config/: __init__.py  basedirs.py  confdicts.py  manager.py
jott/fs/: __init__.py  base.py  local.py
jott/gui/: __init__.py  commands.py  common.py  frame.py  images.py  panes.py  widgets.py
jott/jotter/: __init__.py  info.py  layout.py  page.py
jott/utils/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_config.py  test_contents.py  test_env.py  test_fs.py  test_jott.py  test_jotter.py  test_pkgexists.py
tests/fixtures/jottbook/: .jott
tests/fixtures/jottbook/work/: tasks.md
